--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Masai fleet management</title>
+    <style> 
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        form-container{
+            width: 600px;
+            height: max-content;
+            margin:auto;
+            display:
+        }
+    </style>
+
 </head>
 <body>
-    <h1> Fleet Management login </h1>
+     <h1> fleet Management Login</h1>
+     <div class="form-container">
+     <form action="">
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" required><br><br>
+        <label>password:</label>
+
+     </form>
+     </div>
+     <Script>
+        const valid_email=
+     </Script>
     
     <button>login</button>
 
