--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
             width: 600px;
             height: max-content;
             margin:auto;
-            display:
+            display:flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 30px;
+
+
+        }
+        #login{
+            padding:10px 20px;
+            font: size 16px;
+
+        }
+        h1{
+            
         }
     </style>
 
