--- a/admin.html
+++ b/admin.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Admin dashboard page</title>
 </head>
 <body>
-    
+    <h1> welcome to admin login</h1>
+    <div>
+        <form>
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email" required><br><br>
+            <label>password:</label>
+            <input type>
+        </form>
+    </div>
 </body>
 </html>
