--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
         #login{
             padding:10px 20px;
             font: size 16px;
+            background-color: rgb(67, 189, 67);
+            color:white;
+
 
         }
         h1{
+            margin:4% 40%;
+            display:flex;
             
+
         }
     </style>
 
