--- a/admin.html
+++ b/admin.html
@@ -39,9 +39,14 @@
                 </div>
                 <div class="form-group">
                     <label for="category">catergory</label>
-                    <select id="category" required></select>
-                     
-                </div>
+                    <select id="category" required>
+                        <option value="auto">Auto</option>
+                        <option value="Car">CAR</option>
+                        <option value="truck">TRUCK</option>
+                        <option value="bus">BUS</option>
+                    </select>
+                 </div>
+                 <div></div>
 
     </div>
 
