--- a/admin.html
+++ b/admin.html
@@ -47,7 +47,9 @@
                     </select>
                  </div>
                  <div class="form-group">
-                    <label for
+                    <label for="drivername" required>Driver Name </label>
+                    <input type="text" id="Driver"
+
 
                  </div>
 
